--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -23,20 +23,27 @@
         android:layout_height="wrap_content"
         android:text="@string/crime_detail_label"
         style="?android:listSeparatorTextViewStyle"/>
-
-    <Button
-        android:id="@+id/crime_date"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingRight="20dp">
+    <Button
+        android:id="@+id/crime_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"/>
+        android:layout_marginRight="16dp"
+        android:layout_weight="2" />
 
     <Button
-        android:layout_width="358dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
-        android:layout_gravity="center_horizontal" />
+        android:id="@+id/button_time_picker"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1.41" />
+
+    </LinearLayout>
 
     <CheckBox
         android:id="@+id/crime_solved"
