--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -8,6 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/crime_title_label"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp"
         style="?android:listSeparatorTextViewStyle"
         android:textSize="20sp" />
 
@@ -15,6 +17,8 @@
         android:id="@+id/crime_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
         android:textSize="24sp"
         android:hint="@string/crime_title_hint"/>
 
@@ -22,16 +26,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/crime_detail_label"
+        android:layout_marginTop="20dp"
         style="?android:listSeparatorTextViewStyle"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:paddingRight="20dp">
+
     <Button
         android:id="@+id/crime_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_weight="2" />
@@ -47,6 +53,7 @@
 
     <CheckBox
         android:id="@+id/crime_solved"
+        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
