--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#E6A9EC</color>
+    <color name="colorPrimary">#C5CEFD</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#0059B3</color>
 </resources>
