--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -4,23 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/crime_title_label"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp"
-        style="?android:listSeparatorTextViewStyle"
-        android:textSize="20sp" />
-
-    <EditText
-        android:id="@+id/crime_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:textSize="24sp"
-        android:hint="@string/crime_title_hint"/>
+ <include layout="@layout/view_camera_and_title"
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     android:layout_marginLeft="@dimen/activity_vertical_margin"
+     android:layout_marginRight="@dimen/activity_vertical_margin"
+     android:layout_marginTop="@dimen/activity_vertical_margin"
+     />
 
     <TextView
         android:layout_width="match_parent"
@@ -75,6 +65,23 @@
         android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
             android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/call_suspect"
+            android:text="@string/call_suspect"
+            android:layout_width="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp">
 
         <Button
             android:id="@+id/crime_report"
