--- a/app/src/main/res/layout/view_camera_and_title.xml
+++ b/app/src/main/res/layout/view_camera_and_title.xml
@@ -9,7 +9,7 @@
     <!--photo-->
     <LinearLayout
         android:orientation="vertical"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="10dp">
@@ -25,7 +25,7 @@
 
         <ImageButton
             android:id="@+id/crime_camera"
-            android:layout_width="match_parent"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:src="@android:drawable/ic_menu_camera"/>
 
@@ -36,7 +36,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
 
         <TextView
             android:layout_width="match_parent"
